--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "express": "~4.14.0",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0"
+  },
+  "devDependencies": {
+    "bower": "^1.8.0"
   }
 }
