--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "server2": "set PORT=3002 & node ./bin/www",
     "sqlite3-setup": "sqlite3 notes.sqlite3 --init models/schema-sqlite3.sql",
     "start-sqlite3": "set DEBUG=notes:* & set SQLITE_FILE=notes.sqlite3&& set NOTES_MODEL=models/notes-sqlite3&& node ./bin/www",
+    "start-sequelize-mysql": "mysql.bat",
     "postinstall": "bower install"
   },
   "dependencies": {
@@ -19,8 +20,11 @@
     "ejs": "~2.5.2",
     "express": "~4.14.0",
     "fs-extra": "^1.0.0",
+    "js-yaml": "^3.7.0",
     "mongodb": "^2.2.16",
     "morgan": "~1.7.0",
+    "mysql": "^2.12.0",
+    "sequelize": "^3.28.0",
     "serve-favicon": "~2.3.0",
     "sqlite3": "^3.1.8"
   },
