--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "mongodb": "^2.2.16",
     "morgan": "~1.7.0",
     "mysql": "^2.12.0",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
+    "restify": "^4.3.0",
     "sequelize": "^3.28.0",
     "serve-favicon": "~2.3.0",
     "sqlite3": "^3.1.8"
