--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mysql": "^2.12.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
+    "passport-twitter": "^1.0.4",
     "restify": "^4.3.0",
     "sequelize": "^3.28.0",
     "serve-favicon": "~2.3.0",
